crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__picker_initial_list.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
assertion_line: 352
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│Existing sessions found, /load or Ctrl+L to load.                               │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ Old title                                 idle     100tok  2025-01-01T00:00:00Z│
│                                                                                │
│↑↓ navigate  enter select  esc cancel              mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=7 col=49 (hidden)
