crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__quit_picker_cancelled.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│✦ Loading session — thread busy-session-0001                                    │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                       busy-ses | 5% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
title: Busy session
