crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__replay_keeps_context_usage.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│✦ Loading session — thread replayed-session-0001                                │
│> replayed question                                                             │
│replayed answer                                                                 │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                      replayed | 42% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=11 col=1
title: Replayed session
