crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__replay_then_live.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
assertion_line: 108
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ > old session question
~ old session answer
~ 
~ ✦ Loading session — thread replayed-session-0001
~ 
~ > replayed question one
┌────────────────────────────────────────────────────────────────────────────────┐
│replayed answer one                                                             │
│                                                                                │
│◆ read_file(a.txt) ✓ contents                                                   │
│more of answer one                                                              │
│                                                                                │
│> replayed question two                                                         │
│replayed answer two                                                             │
│                                                                                │
│> live question after replay                                                    │
│live answer after replay                                                        │
│                                                                                │
│                                                                                │
│replay-c replayed child activity                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│replayed | /help for commands                     mock: mock-model · 43% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=15 col=1
title: Replayed session
