crates/infinity-agent-cli/tests/snapshots/tui_flow_snapshots__second_choice_shown.snap
---
source: crates/infinity-agent-cli/tests/tui_flow_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ Second question?                                                               │
│   Red                                                                          │
│ ▸ Green (default)                                                              │
│   Blue                                                                         │
│                                                                                │
│                                                                                │
│                                                                                │
│↑↓ navigate  enter select  esc default             mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=5 col=0 (hidden)
